Fixed broken image link...
...for the album art for Obscure Covers Vol. 1

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<td><a href="Music/CommonwealthApp/CommonwealthApp.html">Commonwealth App Song</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/ObscureCoversVol1.png" alt="Obscure Covers (Vol. 1) EP cover" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/ObscureCoversVol1/ObscureCoversVol1.png" alt="Obscure Covers (Vol. 1) EP cover" style="width:50px;height:50px;"></td>
 	    <td>2021-05-30</td>
 		<td><a href="Music/home.html">Music</a></td>
 		<td><a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq">Obscure Covers (Vol. 1)</a></td>
