--- a/Music/home.html
+++ b/Music/home.html
@@ -30,6 +30,7 @@
 <br>
 
 <div id="grid">
+	<a href="RPM2023/RPM2023.html" class="img" style="background-image: url(RPM2023/RPM2023.png)" title="Perfection Can't Be Rushed (but this sure can) - An EP of disparate songs written and recorded for the 2023 RPM Challenge"></a>
 	<a href="../placeholder.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
 	<a href="MelancholyChristmas/MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas/MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
 	<a href="CommonwealthApp/CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp/CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
@@ -39,7 +40,7 @@
  </div>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2023-03-01
 </body>
 </html>
 
