--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK.</p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
+	<li>An EP thrown together in two weeks</li>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
-	<li>An original album of songs recorded over lockdown</li>
 	<li>Miscellaneous coding projects</li>
 </ul>
 <p>I hope you find this stuff at least somewhat interesting, I certainly did.</p>
@@ -57,7 +57,13 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
-		  <td><img src="Making//SolarTrader/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album cover" style="width:50px;height:50px;"></td>
+	    <td>2023-03-01</td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/RPM2023/RPM2023.html">Perfection Can't Be Rushed (but this sure can) - an EP in two weeks for the 2023 RPM challenge</a></td>
+	  </tr>
+	  <tr>
+		  <td><img src="Making/SolarTrader/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
 	    <td>2022-12-27</td>
 		<td><a href="Making/home.html">Making</a></td>
 		<td><a href="Making/SolarTrader/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
@@ -113,7 +119,7 @@
 	</table>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2023-03-01
 </body>
 </html>
 
