--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;">Oliver Hagen</h1>
+	<h1 style="text-align:center;"><a href="links.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
