--- a/links.html
+++ b/links.html
@@ -30,16 +30,22 @@
 	
 	<div class="flex-container">
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
+		<div><th><button class="button button" title="Not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
+		
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - Penguinator#6934</button></th></div>
 		
 	</div>
 	
 	<hr>
-	<h3 style="text-align:center;">Miscellaneous</h3>
+	<h3 style="text-align:center;">Catalogue</h3>
 	
 	<div class="flex-container">
 		
+		<div><th><button class="button button" title="Where my original music lives" type="button" onclick="window.location.href='https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA';">Spotify</button></th></div>
+		
   	  <div><th><button class="button button" title="Still learning this" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/releases';">Bandcamp</button></th></div>
+	  
+	  <div><th><button class="button button" title="I'm mainly here" type="button" onclick="window.location.href='https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber';">YouTube</button></th></div>
 	  
   	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
 		
