Updated Linktree with streaming/youtube links for PCBR'd

--- a/Music/RPM2023/RPM2023.html
+++ b/Music/RPM2023/RPM2023.html
@@ -34,11 +34,11 @@
 <p style="text-align:center;">I'll add more info to this page as I get time, and as the videos are made and uploaded- check back soon if you care to.</p>
 
 <h4 style="text-align:center;">Where to find</h4>
-<p style="text-align:center;">Just on Bandcamp at the moment- YouTube videos and a streaming release are scheduled.</p>
+<p style="text-align:center;">It's available on <a href="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can">Bandcamp</a>, <a href="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can">Spotify</a>, and <a href="https://youtube.com/playlist?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN">YouTube</a></p>
 
 
 <hr>
-Last updated 2023-03-03
+Last updated 2023-03-12
 </body>
 </html>
 
