--- a/links.html
+++ b/links.html
@@ -17,11 +17,18 @@
 	<h2 style="text-align:center;">DIY Linktree</h2>
 	
 	<hr>
-	<h3 style="text-align:center;">Latest Music</h3>
+	<h3 style="text-align:center;">Latest Music:</h3>
+	<h4 style="text-align:center;">Perfection Can't Be Rushed (but this sure can) - Original EP</h4>
+	
+	<img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album art" style="width:200px;height:200px;"></img>
 	
 	<div class="flex-container">
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can';">Perfection Can't Be Rushed (but this sure can) - Original EP</button></th></div>
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can';">Bandcamp</button></th></div>
+		
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can';">Spotify</button></th></div>
+		
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://youtube.com/playlist?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN';">YouTube</button></th></div>
 		
 	</div>
 	
@@ -52,7 +59,7 @@
 	</div>
 	  
 <hr>
-Last updated 2023-03-06
+Last updated 2023-03-12
 </body>
 </html>
 
