Added RPM2023 page

--- a/Making/wordleSolver/wordleSolver.html
+++ b/Making/wordleSolver/wordleSolver.html
@@ -54,15 +54,17 @@ words_alpha.txt contains words of all lengths, so my programme's first step when
 Your browser does not support the video tag.
 </video></div>
 
-<p style="text-align:center;">For such a basic solution, it does pretty well. It rarely ever fails to guess the correct word, although it comes down to luck sometimes, for example in situations where there are lots of possible words that differ only by one letter. While intelligent solvers such as humans and AI programmes will guess words which are more commonly used, my programme has no word frequency weighting and is just as likely to go for an obscure word as a common one, meaning it'll just work it's way through a list of similar words, running the risk of picking the wrong one enough times to fail the game.
-<br><br>
-A further problem is the number of non-recognised guesses my solver gives. Obviously it would be silly to go through the word list text file and manually delete the obscure words- instead, the 'nope' command could remove the specified word not only from the runtime list, but also the text file itself... I'll save that for whenever I decide to add a GUI.</p>
+<p style="text-align:center;">For such a basic solution, it does pretty well. It rarely ever fails to guess the correct word, although it comes down to luck sometimes, for example in situations where there are lots of possible words that differ only by one letter. While intelligent solvers such as humans and AI programmes will guess words which are more commonly used, my programme has no word frequency weighting and is just as likely to go for an obscure word as a common one, meaning it'll just work it's way through a list of similar words, running the risk of picking the wrong one enough times to fail the game.</p>
+
+<img src="wordleSolverLoses!.png" title="As described above, the Wordle Solver fails to find a correct solution due to the lack of utilisation of word frequency information." alt="wordle Solver loses!>"</img>
+
+<p style="text-align:center;">A further problem is the number of non-recognised guesses my solver gives. Obviously it would be silly to go through the word list text file and manually delete the obscure words- instead, the 'nope' command could remove the specified word not only from the runtime list, but also the text file itself... I'll save that for whenever I decide to add a GUI.</p>
 
 <h4 style="text-align:center;">Where to find</h4>
 <p style="text-align:center;">The latest version can be downloaded <a href="SimpleWordleSolver.zip" download>here</a>.</p>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2023-06-01
 </body>
 </html>
 
