--- a/links.html
+++ b/links.html
@@ -16,6 +16,8 @@
 	
 	<h2 style="text-align:center;">DIY Linktree</h2>
 	
+<h4 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Socials' section below.</h4>
+	
 	<hr>
 	<h3 style="text-align:center;">Latest Music:</h3>
 	<h4 style="text-align:center;">Perfection Can't Be Rushed (but this sure can) - Original EP</h4>
@@ -41,6 +43,8 @@
 		
 		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - Penguinator#6934</button></th></div>
 		
+		<div><th><button class="button button" title="Old faithful" type="button" onclick="window.location.href='mailto:ophagen@icloud.com">Send Email</button></th></div>
+		
 	</div>
 	
 	<hr>
@@ -59,7 +63,7 @@
 	</div>
 	  
 <hr>
-Last updated 2023-03-12
+Last updated 2023-06-05
 </body>
 </html>
 
