--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
 	</div>
 	
+<h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
+	
 <h3>About Me:</h3>
-<p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK.</p>
+<p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a>.</p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
-	<li>An EP thrown together in two weeks</li>
+	<li>A homemade Sysex-sending MIDI controller for my synth</li>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
@@ -118,8 +120,15 @@
 	  </tr>
 	</table>
 
+<h3>This Website:</h3>
+<p>This website has been written entirely manually as an exercise in learning HTML and CSS. It's obviously pretty basic, but at the moment seems mostly fit for purpose.
+<br><br>	
+Current planned improvements include better scaling for mobile devices and very large screens, and some sort of dark mode which auto-switches depending on the timezone from which the site is accessed.
+<br><br>
+I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
+
 <hr>
-Last updated 2023-03-01
+Last updated 2023-06-05
 </body>
 </html>
 
