--- a/Making/home.html
+++ b/Making/home.html
@@ -14,12 +14,27 @@
 	
 	
 	<div class="flex-container">
-	  <div><th><button class="button button" title="I'm mainly here" type="button" onclick="window.location.href='https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber';">YouTube</button></th></div>
-	  <div><th><button class="button button" title="Where my original music lives" type="button" onclick="window.location.href='https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA';">Spotify</button></th></div>
-	  <div><th><button class="button button" title="Still learning this" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/releases';">Bandcamp</button></th></div>
-	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
-	  <div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
-	  <!--<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='ATA.html';">The Bad Music Scene: All The Audio Project</button></th></div>-->
+		
+	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
+         <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
+         <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
+         <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+      </form></th></div>
+	  
 	</div>
 	
 	<h2 style="text-align:center;">Making</h2>	
