--- a/links.html
+++ b/links.html
@@ -26,11 +26,17 @@
 	
 	<div class="flex-container">
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can';">Bandcamp</button></th></div>
+		<div><th><form action="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can" target="_blank">
+             <button class="button button" type="submit">Bandcamp</button>
+          </form></th></div>
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can';">Spotify</button></th></div>
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button" onclick="window.location.href='https://youtube.com/playlist?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN';">YouTube</button></th></div>
+  	  <div><th><form action="https://open.spotify.com/album/44PziKBIPbgX5UhaDeC10O?si=PjiX8gyPRvmiPCv1yWB4pw" target="_blank">
+           <button class="button button" type="submit">Spotify</button>
+        </form></th></div>
+		
+		
+    	  <div><th><a href="https://youtube.com/playlist\?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN" target="_blank"><button class="button button">YouTube</button></a></th></div>
 		
 	</div>
 	
@@ -39,11 +45,15 @@
 	
 	<div class="flex-container">
 		
-		<div><th><button class="button button" title="Not fully understood" type="button" onclick="window.location.href='https://www.instagram.com/penguinatron/';">Instagram</button></th></div>
+  	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
+           <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+        </form></th></div>
 		
-		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - Penguinator#6934</button></th></div>
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - oliver.hagen</button></th></div>
 		
-		<div><th><button class="button button" title="Old faithful" type="button" onclick="window.location.href='mailto:ophagen@icloud.com">Send Email</button></th></div>
+  	  <div><th><form action="mailto:ophagen@icloud.com;" target="_blank">
+           <button class="button button" title="Old faithful" type="submit">Send Email</button>
+        </form></th></div>
 		
 	</div>
 	
@@ -52,13 +62,21 @@
 	
 	<div class="flex-container">
 		
-		<div><th><button class="button button" title="Where my original music lives" type="button" onclick="window.location.href='https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA';">Spotify</button></th></div>
+  	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
+           <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
+        </form></th></div>
 		
-  	  <div><th><button class="button button" title="Still learning this" type="button" onclick="window.location.href='https://oliverhagen.bandcamp.com/releases';">Bandcamp</button></th></div>
+	  <div><th><form action="https://oliverhagen.bandcamp.com/" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+      </form></th></div>
 	  
-	  <div><th><button class="button button" title="I'm mainly here" type="button" onclick="window.location.href='https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber';">YouTube</button></th></div>
+	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
+         <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
+      </form></th></div>
 	  
-  	  <div><th><button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="button" onclick="window.location.href='https://soundcloud.com/penguinator-626121505';">SoundCloud</button></th></div>
+	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
+         <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
+      </form></th></div>
 		
 	</div>
 	  
