Added DivingBoard page
contains some 'To Be Added' bits.

--- a/Music/home.html
+++ b/Music/home.html
@@ -39,23 +39,24 @@
 	
 	<h2 style="text-align:center;">Music</h2>	
 	
-<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently listening to some albums I got for Christmas- Kraftwerk, Air, Portishead, Sundara Karma - lots to learn about.</p>
+<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently between musical obsessions, and trying to re-learn my scales to get 'fitter' at piano again.</p>
 <p style="text-align:center;">Collected below are musical projects I've been involved with. Some are completely my own, while others are collaborative efforts I've been lucky enough to be a part of. All of them were fun to do, and I hope they hold some interest.</p>
 
 <br>
 
 <div id="grid">
 	<a href="RPM2023/RPM2023.html" class="img" style="background-image: url(RPM2023/RPM2023.png)" title="Perfection Can't Be Rushed (but this sure can) - An EP of disparate songs written and recorded for the 2023 RPM Challenge"></a>
-	<a href="../placeholder.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
+	<a href="Splinters/Splinters.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
 	<a href="MelancholyChristmas/MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas/MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
 	<a href="CommonwealthApp/CommonwealthApp.html" class="img" style="background-image: url(CommonwealthApp/CommonwealthApp.png)" title="Commonwealth App song, submitted as coursework for my degree"></a>
 	<a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq" class="img" style="background-image: url(ObscureCoversVol1/ObscureCoversVol1.png)" title="Obscure Covers Volume 1: Relatively unknown songs covered in different styles, as an exercise in expanding my stylistic range."></a>
 <a href="MorningChildhood/MorningChildhood.html" class="img" style="background-image: url(MorningChildhood/MorningChildhood.png)" title="Morning Childhood: My first original album."></a>
     <a href="PlasticBeach/PlasticBeach.html" class="img" style="background-image: url(PlasticBeach/PlasticBeach.png)" title="Plastic Beach - Kazoo Edition: A faithful recreation of most of the amazing Gorillaz album, done using only the sounds of the kazoo."></a>
+	<a href="FreightTrain/FreightTrain.html" class="img" style="background-image: url(FreightTrain/FreightTrain.jpg)" title="Freight Train: My debut single."></a>
  </div>
 
 <hr>
-Last updated 2023-03-01
+Last updated 2023-07-10
 </body>
 </html>
 
