--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
 	
 <h3>About Me:</h3>
-<p>I'm a 21-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a>.</p>
+<p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a>.</p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
 	<li>A homemade Sysex-sending MIDI controller for my synth</li>
@@ -89,7 +89,7 @@
 		  <td><img src="Music/Splinters/Splinters.jpg" alt="Splinters soundtrack album art" style="width:50px;height:50px;"></td>
 	    <td>2022-08-21</td>
 		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="placeholder.html">Splinters Original Score - for the Dolphin Youth Theatre Company</a></td>
+		<td><a href="Music/Splinters/Splinters.html">Splinters Original Score - for the Dolphin Youth Theatre Company</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Making/wordleSolver/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
@@ -128,10 +128,16 @@
 		<td><a href="Making/timelapseCam/timelapseCam.html">Python Timelapse Camera</a></td>
 	  </tr>
 	  <tr>
-		  <td><img src="Music/PlasticBeach/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album cover" style="width:50px;height:50px;"></td>
+		  <td><img src="Music/PlasticBeach/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album art" style="width:50px;height:50px;"></td>
 	    <td>2020-03-03</td>
 		<td><a href="Music/home.html">Music</a></td>
 		<td><a href="Music/PlasticBeach/PlasticBeach.html">Plastic Beach - Kazoo Edition</a></td>
+	  </tr>
+	  <tr>
+		  <td><img src="Music/FreightTrain/FreightTrain.jpg" alt="Freight Train single art" style="width:50px;height:50px;"></td>
+	    <td>2019-09-18</td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/FreightTrain/FreightTrain.html">Freight Train - my debut single</a></td>
 	  </tr>
 	</table>
 
@@ -143,7 +149,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2023-06-05
+Last updated 2023-07-10
 </body>
 </html>
 
