--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
+	<p><a href="DivingBoard.html">DivingBoard</a></p>
+	
 	<h1 style="text-align:center;"><a href="links.html">Oliver Hagen</a></h1>
 	
 	
