Added 'how it works' page...
... for DivingBoard. It's a stub at the moment, and requires a full written body. However, it's got neat art.

--- a/DivingBoard.html
+++ b/DivingBoard.html
@@ -58,7 +58,7 @@
 	</ul>
 It does sound a bit like I've glossed over some stuff there, but the instructions are genuinely straightforward to follow. I'll post a video of this process here too.</p>
 <h3>How it works:</h3>
-<p><small><i>This is a summary- I will describe how stuff works in more detail in a separate linked page.</i></small></p>
+<p><small><i>This is a summary- I will describe how stuff works in more detail in a <a id="howItWorks" href="DivingBoard/howItWorks.html">separate linked page</a>.</i></small></p>
 <p>The way MIDI messages are 'learnt' by the DivingBoard is essentially a simple replay attack. My synth has an option to send all parameter alterations out as MIDI messages (either CC or Sysex, depending on the parameter). The DivingBoard can listen to these messages through a full sweep of some parameter's range, and then replay the relevant ones back to the synth when we edit the learnt parameter from the DivingBoard.</p>
 <p>The DivingBoard is powered by an Arduino Nano and a Raspberry Pi. The Arduino reads the encoder and potentiometer inputs and sends data to the Pi when a user interaction is detected. The Pi connects to the synth via USB MIDI and sends MIDI messages to it to control parameters which otherwise require heaps of menu diving to access.</p>
 <p>The Arduino code is written in Arduino Programming Language, and the Pi code is written in Python 3. While the Arduino code is fairly neat, the Python code needs refactoring, or possibly straight-up porting to a faster language.</p>
@@ -86,7 +86,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-01-11
+Last updated 2024-01-17
 </body>
 </html>
 
