--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a>.</p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
-	<li>A homemade Sysex-sending MIDI controller for my synth</li>
+	<li><a href="DivingBoard.html">A homemade Sysex-sending MIDI controller for my synth</a></li>
 	<li>The original score to a 5-star play</li>
 	<li>Several kazoo-only cover albums</li>
 	<li>An A*- earning EPQ</li>
@@ -151,7 +151,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2023-07-10
+Last updated 2024-01-23
 </body>
 </html>
 
